Add test properties

--- a/ty-weather-server/src/test/resources/weather-api.properties
+++ b/ty-weather-server/src/test/resources/weather-api.properties
@@ -1,7 +1,7 @@
-app.id=fab2403ad63b8978a7461565b6b3399c
+app.id=TEST_APP_ID
 
-# Example : http://api.openweathermap.org/data/2.5/forecast?q=Grenoble,FR&APPID=fab2403ad63b8978a7461565b6b3399c
+# Example : http://api.openweathermap.org/data/2.5/forecast?q=Grenoble,FR&APPID=TEST_APP_ID
 api.forecast.query=http://api.openweathermap.org/data/2.5/forecast
 
-# Example : http://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID=fab2403ad63b8978a7461565b6b3399c
+# Example : http://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID=TEST_APP_ID
 api.weather.query=http://api.openweathermap.org/data/2.5/weather
