--- a/ty-weather-server/src/main/resources/weather-api.properties
+++ b/ty-weather-server/src/main/resources/weather-api.properties
@@ -1,7 +1,9 @@
 app.id={OPEN_WEATHER_APP_ID}
 
-# Example : http://api.openweathermap.org/data/2.5/forecast?q=Grenoble,FR&APPID={OPEN_WEATHER_APP_ID}
+# Example : http://api.openweathermap.org/data/2.5/forecast?q=Grenoble,FR&units=metric&APPID={OPEN_WEATHER_APP_ID}
 api.forecast.query=http://api.openweathermap.org/data/2.5/forecast
 
-# Example : http://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID={OPEN_WEATHER_APP_ID}
-api.weather.query=http://api.openweathermap.org/data/2.5/weather
+# Example : http://api.openweathermap.org/data/2.5/weather?q=London,uk&units=metric&APPID={OPEN_WEATHER_APP_ID}
+api.currentWeather.query=http://api.openweathermap.org/data/2.5/weather
+
+api.units=metric
