--- a/ty-weather-server/src/test/resources/weather-api.properties
+++ b/ty-weather-server/src/test/resources/weather-api.properties
@@ -4,4 +4,6 @@ app.id=TEST_APP_ID
 api.forecast.query=http://api.openweathermap.org/data/2.5/forecast
 
 # Example : http://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID=TEST_APP_ID
-api.weather.query=http://api.openweathermap.org/data/2.5/weather
+api.currentWeather.query=http://api.openweathermap.org/data/2.5/weather
+
+api.units=metric
