--- a/ty-weather-api/src/main/resources/application.yml
+++ b/ty-weather-api/src/main/resources/application.yml
@@ -25,8 +25,9 @@ weather:
     summary: TY Weather
 
 server:
-  port: 8080
-  contextPath: /api
+  port: 8090
+#  servlet:
+#    context-path: /api
 
 logging:
   level:
