--- a/ty-weather-client/proxy.config.json
+++ b/ty-weather-client/proxy.config.json
@@ -1,6 +1,11 @@
 {
   "/api":{
-    "target":"http://localhost:8080",
+    "target":"http://localhost:8090",
+    "secure":false,
+    "logLevel":"debug"
+  },
+  "/login":{
+    "target":"http://localhost:8090",
     "secure":false,
     "logLevel":"debug"
   }
